# nexmon

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: app.rs  main.rs
src/system/: collector.rs  gpu.rs  mod.rs
src/ui/: cpu.rs  gpu.rs  memory.rs  mod.rs  network.rs  processes.rs
