[package]
name = "nexmon"
version = "0.1.8"
edition = "2021"
description = "Futuristic animated system monitor CLI tool in Rust"
readme = "README.md"
license = "MIT"

[dependencies]
sysinfo    = "0.30"
ratatui    = "0.26"
crossterm  = "0.27"
tokio      = { version = "1", features = ["full"] }
color-eyre = "0.6"
clap       = { version = "4", features = ["derive"] }
